[gd_scene load_steps=2 format=3 uid="uid://ceeve3ji8o787"]

[ext_resource type="Script" path="res://scenes/objects/quest_board/debug_quest_desc.gd" id="1_ngvl0"]

[node name="DebugQuestDesc" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1
script = ExtResource("1_ngvl0")

[node name="QuestNameLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 8
text = "Quest Name"

[node name="QuestOwnerLabel" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Quest Owner
"

[node name="QuestStatusLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 8
text = "Status"
